--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body::-webkit-scrollbar-thumb {
     color: #fff;
 }
 .nav_links li a:hover {
-    color: #edcd32;
+    color: #1589FF;
 }
 .nav_links.mobile {
     height: 280px;
